docs/v0.8.0/_sources/how_to/optimize_operators/index.rst.txt
:orphan:



.. _sphx_glr_how_to_optimize_operators:

Optimize Tensor Operators
-------------------------

These how-tos demonstrate how to optimize a variety of tensor operations for a
variety of targets.



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="(TL;DR) TVM provides abstract interfaces which allows users to depict an algorithm and the algo...">

.. only:: html

    .. figure:: /how_to/optimize_operators/images/thumb/sphx_glr_opt_gemm_thumb.png

        :ref:`sphx_glr_how_to_optimize_operators_opt_gemm.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/optimize_operators/opt_gemm

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this tutorial, we will demonstrate how to write a high performance convolution implementatio...">

.. only:: html

    .. figure:: /how_to/optimize_operators/images/thumb/sphx_glr_opt_conv_cuda_thumb.png

        :ref:`sphx_glr_how_to_optimize_operators_opt_conv_cuda.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/optimize_operators/opt_conv_cuda

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this tutorial, we will demonstrate how to write a high performance convolution schedule usin...">

.. only:: html

    .. figure:: /how_to/optimize_operators/images/thumb/sphx_glr_opt_conv_tensorcore_thumb.png

        :ref:`sphx_glr_how_to_optimize_operators_opt_conv_tensorcore.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/optimize_operators/opt_conv_tensorcore
.. raw:: html

    <div style='clear:both'></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
