docs/v0.10.0/_sources/how_to/optimize_operators/index.rst.txt
:orphan:

Optimize Tensor Operators
-------------------------

These how-tos demonstrate how to optimize a variety of tensor operations for a
variety of targets.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="(TL;DR) TVM provides abstract interfaces which allows users to depict an algorithm and the algo...">

.. only:: html

  .. image:: /how_to/optimize_operators/images/thumb/sphx_glr_opt_gemm_thumb.png
    :alt: How to optimize GEMM on CPU

  :ref:`sphx_glr_how_to_optimize_operators_opt_gemm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">How to optimize GEMM on CPU</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this tutorial, we will demonstrate how to write a high performance convolution implementatio...">

.. only:: html

  .. image:: /how_to/optimize_operators/images/thumb/sphx_glr_opt_conv_cuda_thumb.png
    :alt: How to optimize convolution on GPU

  :ref:`sphx_glr_how_to_optimize_operators_opt_conv_cuda.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">How to optimize convolution on GPU</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this tutorial, we will demonstrate how to write a high performance convolution schedule usin...">

.. only:: html

  .. image:: /how_to/optimize_operators/images/thumb/sphx_glr_opt_conv_tensorcore_thumb.png
    :alt: How to optimize convolution using TensorCores

  :ref:`sphx_glr_how_to_optimize_operators_opt_conv_tensorcore.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">How to optimize convolution using TensorCores</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/optimize_operators/opt_gemm
   /how_to/optimize_operators/opt_conv_cuda
   /how_to/optimize_operators/opt_conv_tensorcore



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
